// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render socials component 1`] = `
<DocumentFragment>
  <div
    class="socials"
  >
    <div
      class="row row_jc-c row_ai-c "
    />
  </div>
</DocumentFragment>
`;

exports[`Should render socials component with links 1`] = `
<DocumentFragment>
  <div
    class="socials"
  >
    <div
      class="row row_jc-c row_ai-c "
    >
      <a
        class="socials__link"
        href="test"
      >
        <img
          alt="link"
          height="40"
          src="http://localhost:3001/file/get/preview"
          width="40"
        />
      </a>
      <a
        class="socials__link"
        href="link"
      >
        test
      </a>
    </div>
  </div>
</DocumentFragment>
`;
